fix: safari word wrap and input border

--- a/src/features/text-display/style.css
+++ b/src/features/text-display/style.css
@@ -40,6 +40,7 @@
   border: none;
 
   white-space: pre;
+  word-wrap: normal;
   overflow: auto;
 }
 
